src/app/shared/parser/PEG_parser_var_code.js
// Generated by Peggy 2.0.1.
//
// https://peggyjs.org/

"use strict";

function peg$subclass(child, parent) {
  function C() { this.constructor = child; }
  C.prototype = parent.prototype;
  child.prototype = new C();
}

function peg$SyntaxError(message, expected, found, location) {
  var self = Error.call(this, message);
  // istanbul ignore next Check is a necessary evil to support older environments
  if (Object.setPrototypeOf) {
    Object.setPrototypeOf(self, peg$SyntaxError.prototype);
  }
  self.expected = expected;
  self.found = found;
  self.location = location;
  self.name = "SyntaxError";
  return self;
}

peg$subclass(peg$SyntaxError, Error);

function peg$padEnd(str, targetLength, padString) {
  padString = padString || " ";
  if (str.length > targetLength) { return str; }
  targetLength -= str.length;
  padString += padString.repeat(targetLength);
  return str + padString.slice(0, targetLength);
}

peg$SyntaxError.prototype.format = function(sources) {
  var str = "Error: " + this.message;
  if (this.location) {
    var src = null;
    var k;
    for (k = 0; k < sources.length; k++) {
      if (sources[k].source === this.location.source) {
        src = sources[k].text.split(/\r\n|\n|\r/g);
        break;
      }
    }
    var s = this.location.start;
    var loc = this.location.source + ":" + s.line + ":" + s.column;
    if (src) {
      var e = this.location.end;
      var filler = peg$padEnd("", s.line.toString().length, ' ');
      var line = src[s.line - 1];
      var last = s.line === e.line ? e.column : line.length + 1;
      var hatLen = (last - s.column) || 1;
      str += "\n --> " + loc + "\n"
          + filler + " |\n"
          + s.line + " | " + line + "\n"
          + filler + " | " + peg$padEnd("", s.column - 1, ' ')
          + peg$padEnd("", hatLen, "^");
    } else {
      str += "\n at " + loc;
    }
  }
  return str;
};

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
    literal: function(expectation) {
      return "\"" + literalEscape(expectation.text) + "\"";
    },

    class: function(expectation) {
      var escapedParts = expectation.parts.map(function(part) {
        return Array.isArray(part)
          ? classEscape(part[0]) + "-" + classEscape(part[1])
          : classEscape(part);
      });

      return "[" + (expectation.inverted ? "^" : "") + escapedParts.join("") + "]";
    },

    any: function() {
      return "any character";
    },

    end: function() {
      return "end of input";
    },

    other: function(expectation) {
      return expectation.description;
    }
  };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/"/g,  "\\\"")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/\]/g, "\\]")
      .replace(/\^/g, "\\^")
      .replace(/-/g,  "\\-")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = expected.map(describeExpectation);
    var i, j;

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  var peg$FAILED = {};
  var peg$source = options.grammarSource;

  var peg$startRuleFunctions = { Parse: peg$parseParse };
  var peg$startRuleFunction = peg$parseParse;

  var peg$c0 = "{";
  var peg$c1 = ":";
  var peg$c2 = ",";
  var peg$c3 = "}";
  var peg$c4 = "[";
  var peg$c5 = "]";
  var peg$c6 = "+";
  var peg$c7 = "-";
  var peg$c8 = "*";
  var peg$c9 = "/";
  var peg$c10 = "%";
  var peg$c11 = "&&";
  var peg$c12 = "||";
  var peg$c13 = "(";
  var peg$c14 = ")";
  var peg$c15 = "@";
  var peg$c16 = "?";
  var peg$c17 = "#";
  var peg$c18 = "!";
  var peg$c19 = "ps";
  var peg$c20 = "pt";
  var peg$c21 = "pl";
  var peg$c22 = "pg";
  var peg$c23 = "co";
  var peg$c24 = "_v";
  var peg$c25 = "_t";
  var peg$c26 = "_e";
  var peg$c27 = "_w";
  var peg$c28 = "mo";
  var peg$c29 = "===";
  var peg$c30 = "==";
  var peg$c31 = "!==";
  var peg$c32 = "!=";
  var peg$c33 = "<=";
  var peg$c34 = ">=";
  var peg$c35 = "<";
  var peg$c36 = ">";
  var peg$c37 = ".";
  var peg$c38 = "\"";
  var peg$c39 = "'";

  var peg$r0 = /^[a-zA-Z_]/;
  var peg$r1 = /^[a-zA-Z0-9_\-]/;
  var peg$r2 = /^[0-9]/;
  var peg$r3 = /^[^"\n]/;
  var peg$r4 = /^[^'\n]/;
  var peg$r5 = /^[Tt]/;
  var peg$r6 = /^[Rr]/;
  var peg$r7 = /^[Uu]/;
  var peg$r8 = /^[Ee]/;
  var peg$r9 = /^[Ff]/;
  var peg$r10 = /^[Aa]/;
  var peg$r11 = /^[Ll]/;
  var peg$r12 = /^[Ss]/;
  var peg$r13 = /^[ \t\n\r]/;

  var peg$e0 = peg$otherExpectation("dictionary");
  var peg$e1 = peg$literalExpectation("{", false);
  var peg$e2 = peg$literalExpectation(":", false);
  var peg$e3 = peg$literalExpectation(",", false);
  var peg$e4 = peg$literalExpectation("}", false);
  var peg$e5 = peg$otherExpectation("list");
  var peg$e6 = peg$literalExpectation("[", false);
  var peg$e7 = peg$literalExpectation("]", false);
  var peg$e8 = peg$literalExpectation("+", false);
  var peg$e9 = peg$literalExpectation("-", false);
  var peg$e10 = peg$literalExpectation("*", false);
  var peg$e11 = peg$literalExpectation("/", false);
  var peg$e12 = peg$literalExpectation("%", false);
  var peg$e13 = peg$literalExpectation("&&", false);
  var peg$e14 = peg$literalExpectation("||", false);
  var peg$e15 = peg$otherExpectation("expression, number, string or identifier");
  var peg$e16 = peg$literalExpectation("(", false);
  var peg$e17 = peg$literalExpectation(")", false);
  var peg$e18 = peg$otherExpectation("function call");
  var peg$e19 = peg$literalExpectation("@", false);
  var peg$e20 = peg$literalExpectation("?", false);
  var peg$e21 = peg$literalExpectation("#", false);
  var peg$e22 = peg$otherExpectation("Negation");
  var peg$e23 = peg$literalExpectation("!", false);
  var peg$e24 = peg$otherExpectation("Identifier");
  var peg$e25 = peg$classExpectation([["a", "z"], ["A", "Z"], "_"], false, false);
  var peg$e26 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], "_", "-"], false, false);
  var peg$e27 = peg$otherExpectation("Attribute Name");
  var peg$e28 = peg$otherExpectation("Mobius Name");
  var peg$e29 = peg$literalExpectation("ps", false);
  var peg$e30 = peg$literalExpectation("pt", false);
  var peg$e31 = peg$literalExpectation("pl", false);
  var peg$e32 = peg$literalExpectation("pg", false);
  var peg$e33 = peg$literalExpectation("co", false);
  var peg$e34 = peg$literalExpectation("_v", false);
  var peg$e35 = peg$literalExpectation("_t", false);
  var peg$e36 = peg$literalExpectation("_e", false);
  var peg$e37 = peg$literalExpectation("_w", false);
  var peg$e38 = peg$literalExpectation("mo", false);
  var peg$e39 = peg$otherExpectation("Compare");
  var peg$e40 = peg$literalExpectation("===", false);
  var peg$e41 = peg$literalExpectation("==", false);
  var peg$e42 = peg$literalExpectation("!==", false);
  var peg$e43 = peg$literalExpectation("!=", false);
  var peg$e44 = peg$literalExpectation("<=", false);
  var peg$e45 = peg$literalExpectation(">=", false);
  var peg$e46 = peg$literalExpectation("<", false);
  var peg$e47 = peg$literalExpectation(">", false);
  var peg$e48 = peg$otherExpectation("Number");
  var peg$e49 = peg$otherExpectation("Integer");
  var peg$e50 = peg$classExpectation([["0", "9"]], false, false);
  var peg$e51 = peg$otherExpectation("Float");
  var peg$e52 = peg$literalExpectation(".", false);
  var peg$e53 = peg$otherExpectation("String");
  var peg$e54 = peg$otherExpectation("String - Double Quote");
  var peg$e55 = peg$literalExpectation("\"", false);
  var peg$e56 = peg$classExpectation(["\"", "\n"], true, false);
  var peg$e57 = peg$otherExpectation("String - Single Quote");
  var peg$e58 = peg$literalExpectation("'", false);
  var peg$e59 = peg$classExpectation(["'", "\n"], true, false);
  var peg$e60 = peg$otherExpectation("Boolean");
  var peg$e61 = peg$otherExpectation("Boolean true");
  var peg$e62 = peg$classExpectation(["T", "t"], false, false);
  var peg$e63 = peg$classExpectation(["R", "r"], false, false);
  var peg$e64 = peg$classExpectation(["U", "u"], false, false);
  var peg$e65 = peg$classExpectation(["E", "e"], false, false);
  var peg$e66 = peg$otherExpectation("Boolean false");
  var peg$e67 = peg$classExpectation(["F", "f"], false, false);
  var peg$e68 = peg$classExpectation(["A", "a"], false, false);
  var peg$e69 = peg$classExpectation(["L", "l"], false, false);
  var peg$e70 = peg$classExpectation(["S", "s"], false, false);
  var peg$e71 = peg$classExpectation([" ", "\t", "\n", "\r"], false, false);

  var peg$f0 = function(expr) {
  const trimmedText = text().trim()
  if (options.varUsed.size === 1 && options.varUsed.has(trimmedText)) {
    options.varUsed.delete(trimmedText)
    options.varDeclared.add(trimmedText)
  }
  return expr; 
};
  var peg$f1 = function(head, expr1, expr2, tail) {
  	return '{' + expr1 + ': ' + expr2 + tail.reduce(function(result, element) {
      	return result + ', ' + element[2] + ': ' + element[6]
    }, '') + '}';
  };
  var peg$f2 = function(head, expr1, tail) {
  	return '[' + expr1 + tail.reduce(function (result, element) {
      	return result + ', ' + element[2]
    }, '') + ']';
  };
  var peg$f3 = function(head, expr1, tail) {
    // |*a_|b_|c_|d_
  	return  tail.reduce(function (result, element) {
      	return result + '|' + element[2]
    }, '|*' + expr1);
  };
  var peg$f4 = function(head, tail) {
      return tail.reduce(function(result, element) {
      	return result + ' ' + element[0] + ' ' + element[2]
    }, head);
  };
  var peg$f5 = function() { return text() };
  var peg$f6 = function(expr) { return '(' + expr + ')'; };
  var peg$f7 = function(expr1, arg1, tail) {
    const rep = options.funcReplace[expr1]
  	return rep + '(' + (arg1? arg1: '') + tail.reduce(function(result, element) {
      	return result + ', ' + element[2]
    }, '') + ')';
  };
  var peg$f8 = function(expr, tail) {
    return tail.reduce((r, e) =>  e[0].replace(/<<RESULT>>/g, r), expr)
  };
  var peg$f9 = function(expr) { return '(' + expr + ')'; };
  var peg$f10 = function(from, to) { 
    if (to) return '<<RESULT>>.slice(' + from + ', ' + to + ')'
    return '<<RESULT>>.slice(' + from + ')'
  };
  var peg$f11 = function(idx) { 
    return '<<RESULT>>[pythonList(' + idx + ', <<RESULT>>.length)]'; 
  };
  var peg$f12 = function(attr, ls) { 
    if (ls) return '<<RESULT>>@' + attr + '[' + ls[1] + ']';
    return '<<RESULT>>@' + attr;
  };
  var peg$f13 = function(attr, li, condSym, condVal) { 
  if (li) return '<<RESULT>>?@' + attr + '[' + li[1] + ']' + condSym + condVal; 
  return '<<RESULT>>?@' + attr + condSym + condVal; 
  };
  var peg$f14 = function(eType) {
    return '<<RESULT>>#' + eType;
  };
  var peg$f15 = function(attr, ls) { 
    if (ls) return '@' + attr + '[' + ls[1] + ']';
    return '@' + attr;
  };
  var peg$f16 = function(attr, li, condSym, condVal) { 
  if (li) return '?@' + attr + '[' + li[1] + ']' + condSym + condVal; 
  return '?@' + attr + condSym + condVal; 
  };
  var peg$f17 = function(eType, recursive) { 
    if (recursive.length > 0) {
      return recursive.reduce((result, element) => result + '#' + element[2] + ' ', '#' + eType + ' ');
    }
    return '#' + eType;
  };
  var peg$f18 = function(op, expr) { return op + expr;};
  var peg$f19 = function() {
    if (options.funcReplace[text()]){
        return 'JSON.parse(JSON.stringify(' + options.funcReplace[text()] + '))';
    } else if (options.specialVars.has(text())) {
      return text();
    }
    options.varUsed.add(text());
    return text() + '_';
  };
  var peg$f20 = function() { return text(); };
  var peg$f21 = function() { return text(); };
  var peg$f22 = function() { return text(); };
  var peg$f23 = function(neg, num) {return (neg? neg: '') + num; };
  var peg$f24 = function() { return text(); };
  var peg$f25 = function() { return text(); };
  var peg$f26 = function() { return text(); };
  var peg$f27 = function() { return text(); };
  var peg$f28 = function(bool) { return bool;};
  var peg$f29 = function() { return 'true'; };
  var peg$f30 = function() { return 'false'; };
  var peg$f31 = function() { return '[]'; };
  var peg$f32 = function() { return '{}'; };
  var peg$currPos = 0;
  var peg$savedPos = 0;
  var peg$posDetailsCache = [{ line: 1, column: 1 }];
  var peg$maxFailPos = 0;
  var peg$maxFailExpected = [];
  var peg$silentFails = 0;

  var peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos];
    var p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos);
    var endPosDetails = peg$computePosDetails(endPos);

    return {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseParse() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parse_();
    s2 = peg$parseExpression();
    if (s2 === peg$FAILED) {
      s2 = peg$parseLongElement();
      if (s2 === peg$FAILED) {
        s2 = peg$parseDict();
        if (s2 === peg$FAILED) {
          s2 = peg$parseDestructList();
          if (s2 === peg$FAILED) {
            s2 = peg$parseEmptyObj();
          }
        }
      }
    }
    if (s2 !== peg$FAILED) {
      s3 = peg$parse_();
      peg$savedPos = s0;
      s0 = peg$f0(s2);
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseDict() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11, s12, s13, s14, s15, s16, s17;

    peg$silentFails++;
    s0 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 123) {
      s1 = peg$c0;
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e1); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      s3 = peg$parseString();
      if (s3 === peg$FAILED) {
        s3 = peg$parseNumber();
        if (s3 === peg$FAILED) {
          s3 = peg$parseIdentifierUnmod();
        }
      }
      if (s3 !== peg$FAILED) {
        s4 = peg$parse_();
        if (input.charCodeAt(peg$currPos) === 58) {
          s5 = peg$c1;
          peg$currPos++;
        } else {
          s5 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e2); }
        }
        if (s5 !== peg$FAILED) {
          s6 = peg$parse_();
          s7 = peg$parseExpression();
          if (s7 === peg$FAILED) {
            s7 = peg$parseList();
            if (s7 === peg$FAILED) {
              s7 = peg$parseDict();
            }
          }
          if (s7 !== peg$FAILED) {
            s8 = [];
            s9 = peg$currPos;
            if (input.charCodeAt(peg$currPos) === 44) {
              s10 = peg$c2;
              peg$currPos++;
            } else {
              s10 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$e3); }
            }
            if (s10 !== peg$FAILED) {
              s11 = peg$parse_();
              s12 = peg$parseString();
              if (s12 === peg$FAILED) {
                s12 = peg$parseNumber();
                if (s12 === peg$FAILED) {
                  s12 = peg$parseIdentifierUnmod();
                }
              }
              if (s12 !== peg$FAILED) {
                s13 = peg$parse_();
                if (input.charCodeAt(peg$currPos) === 58) {
                  s14 = peg$c1;
                  peg$currPos++;
                } else {
                  s14 = peg$FAILED;
                  if (peg$silentFails === 0) { peg$fail(peg$e2); }
                }
                if (s14 !== peg$FAILED) {
                  s15 = peg$parse_();
                  s16 = peg$parseExpression();
                  if (s16 === peg$FAILED) {
                    s16 = peg$parseList();
                    if (s16 === peg$FAILED) {
                      s16 = peg$parseDict();
                    }
                  }
                  if (s16 !== peg$FAILED) {
                    s17 = peg$parse_();
                    s10 = [s10, s11, s12, s13, s14, s15, s16, s17];
                    s9 = s10;
                  } else {
                    peg$currPos = s9;
                    s9 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s9;
                  s9 = peg$FAILED;
                }
              } else {
                peg$currPos = s9;
                s9 = peg$FAILED;
              }
            } else {
              peg$currPos = s9;
              s9 = peg$FAILED;
            }
            while (s9 !== peg$FAILED) {
              s8.push(s9);
              s9 = peg$currPos;
              if (input.charCodeAt(peg$currPos) === 44) {
                s10 = peg$c2;
                peg$currPos++;
              } else {
                s10 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$e3); }
              }
              if (s10 !== peg$FAILED) {
                s11 = peg$parse_();
                s12 = peg$parseString();
                if (s12 === peg$FAILED) {
                  s12 = peg$parseNumber();
                  if (s12 === peg$FAILED) {
                    s12 = peg$parseIdentifierUnmod();
                  }
                }
                if (s12 !== peg$FAILED) {
                  s13 = peg$parse_();
                  if (input.charCodeAt(peg$currPos) === 58) {
                    s14 = peg$c1;
                    peg$currPos++;
                  } else {
                    s14 = peg$FAILED;
                    if (peg$silentFails === 0) { peg$fail(peg$e2); }
                  }
                  if (s14 !== peg$FAILED) {
                    s15 = peg$parse_();
                    s16 = peg$parseExpression();
                    if (s16 === peg$FAILED) {
                      s16 = peg$parseList();
                      if (s16 === peg$FAILED) {
                        s16 = peg$parseDict();
                      }
                    }
                    if (s16 !== peg$FAILED) {
                      s17 = peg$parse_();
                      s10 = [s10, s11, s12, s13, s14, s15, s16, s17];
                      s9 = s10;
                    } else {
                      peg$currPos = s9;
                      s9 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s9;
                    s9 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s9;
                  s9 = peg$FAILED;
                }
              } else {
                peg$currPos = s9;
                s9 = peg$FAILED;
              }
            }
            if (input.charCodeAt(peg$currPos) === 125) {
              s9 = peg$c3;
              peg$currPos++;
            } else {
              s9 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$e4); }
            }
            if (s9 !== peg$FAILED) {
              peg$savedPos = s0;
              s0 = peg$f1(s1, s3, s7, s8);
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    peg$silentFails--;
    if (s0 === peg$FAILED) {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e0); }
    }

    return s0;
  }

  function peg$parseList() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10;
